--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
       var previousIsZero = true;
       var acc= false;
 
-      var config = <%= nconf %>;
+      var config = <%= config %>;
 
       console.log(config.get('acc_mode'));
 
