config file test 29

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,10 @@
       var previousIsZero = true;
       var acc= false;
 
-      var config = <%= config %>;
+      var control_mode = <%= control_mode %>;
+      var acc_mode = <%= acc_mode %>;
 
-      console.log(config.get('acc_mode'));
+      console.log(control_mode);
 
       console.log("Touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
       var socket = io.connect('http://192.168.10.1:3000');
