config file test 31

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,10 +22,8 @@
       var interval = 1/10;
       var valY=0;
       var previousIsZero = true;
-      var acc= false;
-
-      var control_mode = <%= control_mode %>;
-      var acc_mode = <%= acc_mode %>;
+      var control_mode = <%- control_mode %>;
+      var acc = <%= acc_mode %>;
 
       console.log(control_mode);
 
