config file test 33

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
       var interval = 1/10;
       var valY=0;
       var previousIsZero = true;
-      var control_mode = <% control_mode %>;
+      var control_mode = '<%= control_mode %>';
       var acc = <%= acc_mode %>;
 
       console.log(control_mode);
