config file test 36

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -5,9 +5,9 @@
     </head>
     <body>
 		<form>
-		<input type="radio" name="control_mode" value="tank" <%= if(acc_mode == "tank") {=%> checked <%= } =%>>Tank
+		<input type="radio" name="control_mode" value="tank" <% if(acc_mode == "tank") {%> checked <% } %> >Tank
 		<br>
-		<input type="radio" name="control_mode" value="polar" <%= if(acc_mode == "tank") {=%> checked <%= } =%>>Polar
+		<input type="radio" name="control_mode" value="polar" <% if(acc_mode == "polar") {%> checked <% } %> >Polar
 		</form>
     </body>
  </html>
