config file test 37

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -5,7 +5,7 @@
     </head>
     <body>
 		<form>
-		<input type="radio" name="control_mode" value="tank" <% if(acc_mode == "tank") {%> checked <% } %> >Tank
+		<input type="radio" name="control_mode" value="tank" checked >Tank
 		<br>
 		<input type="radio" name="control_mode" value="polar" <% if(acc_mode == "polar") {%> checked <% } %> >Polar
 		</form>
