--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -5,9 +5,18 @@
     </head>
     <body>
 		<form>
-		<input type="checkbox" name="control_mode" value="tank" <% if(acc_mode == "tank") {%> checked <% } %> >Tank
+		<input type="checkbox" id="tankCheck" name="control_modeTank" value="tank"  >Tank
 		<br>
-		<input type="checkbox" name="control_mode" value="polar" <% if(acc_mode == "polar") {%> checked <% } %> >Polar
+		<input type="checkbox" id="polarCheck" name="control_modePolar" value="polar"  >Polar
 		</form>
     </body>
+    <script>
+
+		// Check
+		if (<%=acc_mode%> == "tank"){
+			document.getElementById("tankCheck").checked = true;
+		}else(<%=acc_mode%> == "tank"){
+			document.getElementById("polarCheck").checked = true;
+		}
+    </script>
  </html>
