config file test 40

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -15,7 +15,7 @@
 		// Check
 		if (<%=acc_mode%> == "tank"){
 			document.getElementById("tankCheck").checked = true;
-		}else(<%=acc_mode%> == "tank"){
+		}else if(<%=acc_mode%> == "tank"){
 			document.getElementById("polarCheck").checked = true;
 		}
     </script>
