--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -5,18 +5,18 @@
     </head>
     <body>
 		<form>
-		<input type="checkbox" id="tankCheck" name="control_modeTank" value="tank"  >Tank
+		<input type="checkbox" id="tankCheck" name="control_modeTank" value="tank" <% if(control_mode == "tank") {%> checked <% } %> >Tank
 		<br>
-		<input type="checkbox" id="polarCheck" name="control_modePolar" value="polar"  >Polar
+		<input type="checkbox" id="polarCheck" name="control_modePolar" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
 		</form>
     </body>
     <script>
 
 		// Check
-		if (<%=acc_mode%> == "tank"){
-			document.getElementById("tankCheck").checked = true;
-		}else if(<%=acc_mode%> == "tank"){
-			document.getElementById("polarCheck").checked = true;
-		}
+		// if (<%=control_mode%> == "tank"){
+		// 	document.getElementById("tankCheck").checked = true;
+		// }else(<%=control_mode%> == "tank"){
+		// 	document.getElementById("polarCheck").checked = true;
+		// }
     </script>
  </html>
