config file test 42

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -9,14 +9,6 @@
 		<br>
 		<input type="checkbox" id="polarCheck" name="control_modePolar" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
 		</form>
+		<a href="/">webCast</a>
     </body>
-    <script>
-
-		// Check
-		// if (<%=control_mode%> == "tank"){
-		// 	document.getElementById("tankCheck").checked = true;
-		// }else(<%=control_mode%> == "tank"){
-		// 	document.getElementById("polarCheck").checked = true;
-		// }
-    </script>
  </html>
