config file test 43

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <img id="videofeed" src="http://192.168.10.1:8080/stream/video.mjpeg" alt="If you see this message check the availability of video stream">
         <div id="sticksContainer">
             <div id="stick1"></div>
-            <a href="/settings">TEST</a>
+            <a href="/settings"><img src="img/tools.png"></a>
             <div id="stick2"></div>
         </div>
     </body>
