--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,13 @@
     </head>
     <body>
         <span id="features"></span></p>
+        <div id="settings">
+          <a href="/settings"><img src="img/tools.png"></a>
+        </div>
         <span id="example"></span>
         <img id="videofeed" src="http://192.168.10.1:8080/stream/video.mjpeg" alt="If you see this message check the availability of video stream">
         <div id="sticksContainer">
             <div id="stick1"></div>
-            <a href="/settings"><img src="img/tools.png"></a>
             <div id="stick2"></div>
         </div>
     </body>
