--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,14 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 1;
 }
 #sticksContainer {
   width: 99%;
   height: 99%;
   margin: auto;
   position: absolute;
-  z-index: 20;
+  z-index: 2;
 }
 #stick1 {
   display: inline-block;
@@ -28,11 +28,11 @@
 }
 
 #settings {
-  position: static !important;
-  display: inline-block;
   float: right;
   width: 15%;
   height: 15%;
-  z-index: 30;
+  margin: auto;
+  position: absolute;
+  z-index: 3;
 }
 
