--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -4,11 +4,19 @@
         <link rel="icon" type="image/png" href="img/cast_favicon.png" />
     </head>
     <body>
-		<form>
-		<input type="checkbox" id="tankCheck" name="control_modeTank" value="tank" <% if(control_mode == "tank") {%> checked <% } %> >Tank
-		<br>
-		<input type="checkbox" id="polarCheck" name="control_modePolar" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
+		<form action="/editsettings" method="POST">
+			<fieldset>
+				<legend>Driving Control mode:</legend>
+				<input type="radio" id="tankControl" name="control_mode" value="tank" <% if(control_mode == "tank") {%> checked <% } %> >Tank
+				<input type="radio" id="polarControl" name="control_mode" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
+			</fieldset>
+			<fieldset>
+				<legend>Camera control :</legend>
+				<input type="radio" id="joyControl" name="acc_camera_mode" value="true" <% if(acc_mode == "true") {%> checked <% } %> >Accelerometer
+				<input type="radio" id="accControl" name="acc_camera_mode" value="false" <% if(acc_mode == "false") {%> checked <% } %> >Joystick
+			</fieldset>
+			<input type="submit" value="Submit">
 		</form>
-		<a href="/">webCast</a>
+		<a href="http://192.168.10.1:8080/panel"> Camera control panel</a>
     </body>
  </html>
