--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -4,19 +4,77 @@
         <link rel="icon" type="image/png" href="img/cast_favicon.png" />
     </head>
     <body>
-		<form action="/editsettings" method="POST">
-			<fieldset>
-				<legend>Driving Control mode:</legend>
-				<input type="radio" id="tankControl" name="control_mode" value="tank" <% if(control_mode == "tank") {%> checked <% } %> >Tank
-				<input type="radio" id="polarControl" name="control_mode" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
-			</fieldset>
-			<fieldset>
-				<legend>Camera control :</legend>
-				<input type="radio" id="joyControl" name="acc_camera_mode" value="true" <% if(acc_mode == "true") {%> checked <% } %> >Accelerometer
-				<input type="radio" id="accControl" name="acc_camera_mode" value="false" <% if(acc_mode == "false") {%> checked <% } %> >Joystick
-			</fieldset>
-			<input type="submit" value="Submit">
-		</form>
-		<a href="http://192.168.10.1:8080/panel"> Camera control panel</a>
+    <style>
+    	#container
+		{
+			margin: 0 auto;
+			width: 900px;
+			background: #fff;
+		}
+
+		#header
+		{
+			background: #ccc;
+			padding: 20px;
+		}
+
+		#header h1 { margin: 0; }
+
+		#content-container
+		{
+			float: left;
+			width: 900px;
+		}
+
+		#content
+		{
+			clear: left;
+			float: left;
+			width: 560px;
+			padding: 20px 0;
+			margin: 0 0 0 30px;
+			display: inline;
+		}
+
+		#content h2 { margin: 0; }
+
+		#footer
+		{
+			clear: both;
+			background: #ccc;
+			text-align: right;
+			padding: 20px;
+			height: 1%;
+		}
+    </style>
+	<div id="container">
+		<div id="header">
+			<h1>
+				webCast configuration page
+			</h1>
+		</div>
+		<div id="content-container">
+			<div id="content">
+				<form action="/editsettings" method="POST">
+					<fieldset>
+						<legend>Driving Control mode:</legend>
+						<input type="radio" id="tankControl" name="control_mode" value="tank" <% if(control_mode == "tank") {%> checked <% } %> >Tank
+						<input type="radio" id="polarControl" name="control_mode" value="polar" <% if(control_mode == "polar") {%> checked <% } %> >Polar
+					</fieldset>
+					<fieldset>
+						<legend>Camera control :</legend>
+						<input type="radio" id="joyControl" name="acc_camera_mode" value="true" <% if(acc_mode == "true") {%> checked <% } %> >Accelerometer
+						<input type="radio" id="accControl" name="acc_camera_mode" value="false" <% if(acc_mode == "false") {%> checked <% } %> >Joystick
+					</fieldset>
+					<iframe src="http://192.168.10.1:8080/panel" width="600" height="800"></iframe>
+					<input type="submit" value="Submit">
+				</form> 
+			</div>
+			<div id="footer">
+				Copyright © webCast 2015
+			</div>
+		</div>
+	</div>
     </body>
  </html>
+
