--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
       //Define refresh interval (in seconds)
       var interval = 1/10;
       var valY=0;
+      var valX=0;
       var previousIsZero = true;
       var control_mode = '<%= control_mode %>';
       var acc = <%= acc_mode %>;
@@ -56,11 +57,8 @@
       gyro.frequency = 100;
       gyro.startTracking(function(o) {
         // o.Y varie de -5 à 5 lors de l'inclinaison de l'iphone (avant basculement de l'écran), on multiplie par 40 pour arriver à 200
-        if (joystickL.deltaY()==0){
-          valY= 0;
-        }else{
           valY= (o.y)* - 40;
-        }  
+          valX= (o.x)* - 40; 
       });
 
       // INTERVAL EVENT
