--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
       var socket = io.connect('http://192.168.10.1:3000');
 
       //LEFT Stick
-      if(true){
+      if(driver == "true"){
         var joystickL = new VirtualJoystick({
           container : document.getElementById('stick1'),
           strokeStyle : 'cyan',
@@ -49,7 +49,7 @@
       };
           
       // RIGHT Stick
-      if (true) {
+      if (cameraman =="true") {
         var joystickR = new VirtualJoystick({
           container : document.getElementById('stick2'),
           strokeStyle : 'orange',
@@ -71,7 +71,7 @@
       setInterval(function(){
 
         //Left Stick coordinates
-        if (true) {
+        if (driver == "true") {
           // If previous value is 0,0
           if ((joystickL.deltaX() == 0) && (joystickL.deltaY() == 0) && previousIsZero==true){
 
@@ -86,7 +86,7 @@
         };
 
         // Right Stick coordinates
-        if (true) {
+        if (cameraman =="true") {
           if ((joystickR.deltaX() == 0) && (joystickR.deltaY() == 0)){
           }else {
 
