--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
         };
 
         // Right Stick coordinates
-        onsole.log('cameraman 2' + cameraman);
+        console.log('cameraman 2' + cameraman);
         if (cameraman =="true") {
           if ((joystickR.deltaX() == 0) && (joystickR.deltaY() == 0)){
           }else {
