--- a/public/style/style.css
+++ b/public/style/style.css
@@ -62,3 +62,49 @@
 }
 
 
+
+
+
+#container
+    {
+      margin: 0 auto;
+      width: 900px;
+      background: #fff;
+    }
+
+#header
+{
+  background: #ccc;
+  padding: 20px;
+}
+
+#header h1 { margin: 0; }
+
+#content-container
+{
+  float: left;
+  width: 900px;
+}
+
+#content
+{
+  clear: left;
+  float: left;
+  width: 560px;
+  padding: 20px 0;
+  margin: 0 0 0 30px;
+  display: inline;
+}
+
+#content h2 { margin: 0; }
+
+#footer
+{
+  clear: both;
+  background: #ccc;
+  text-align: right;
+  padding: 20px;
+  height: 1%;
+}
+
+
