--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,52 +1,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style/style.css">
         <link rel="icon" type="image/png" href="img/cast_favicon.png" />
     </head>
     <body>
-    <style>
-    	#container
-		{
-			margin: 0 auto;
-			width: 900px;
-			background: #fff;
-		}
-
-		#header
-		{
-			background: #ccc;
-			padding: 20px;
-		}
-
-		#header h1 { margin: 0; }
-
-		#content-container
-		{
-			float: left;
-			width: 900px;
-		}
-
-		#content
-		{
-			clear: left;
-			float: left;
-			width: 560px;
-			padding: 20px 0;
-			margin: 0 0 0 30px;
-			display: inline;
-		}
-
-		#content h2 { margin: 0; }
-
-		#footer
-		{
-			clear: both;
-			background: #ccc;
-			text-align: right;
-			padding: 20px;
-			height: 1%;
-		}
-    </style>
 	<div id="container">
 		<div id="header">
 			<h1>
