--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,7 +139,7 @@
       var button = document.getElementById('hideshow'); // Assumes element with id='button'
 
       function hideshow() {
-          var slide = document.getElementById('mySlide');
+          var slide = document.getElementById('mySlider');
           if (slide.style.visibility !== 'hidden') {
               slide.style.visibility = 'hidden';
           }
