--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         </div>
         <div id="slider">
           <button id="hideshow" onclick="hideshow()"><img src="img/slider.svg"></button>
-          <input id ="mySlider" type="range" value="0" max="200" min="0" step="10" style="display: none" >
+          <input id ="mySlider" type="range" value="0" max="200" min="0" step="10" class="hidden" >
         </div>
         <div id="battery">
           <img <% 
