--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,7 @@
           <a href="/settings"><img src="img/tools.png"></a>
         </div>
         <div id="slider">
-          <button id="hideshow" onclick="hideshow()"><img src="img/slider.svg"></button>
-          <input id ="mySlider" type="range" value="0" max="200" min="0" step="10" >
+          <button id="hideshow" onclick="hideshow()"><img src="img/slider.svg"></button><input id ="mySlider" type="range" value="0" max="200" min="0" step="10" >
         </div>
         <div id="battery">
           <img <% 
